<resources>
    <string name="app_name">Android Box86</string>
    <string name="home_navigation">Home</string>
    <string name="wine_navigation">Wine</string>
    <string name="library_navigation">Library</string>
    <string name="setting_navigation">Advance Settings</string>
    <string name="about_navigation">About</string>
    <string name="follow_navigation">Follows</string>
    <string name="youtube_navigation">Youtube</string>
    <string name="facebook_navigation">Facebook</string>
    <string name="discord_navigation">Discord</string>
    <string name="github_navigation">Github</string>
    <string name="github_navigation1">Termux Github</string>
    <string name="github_navigation2">ptitSeb/box86 Github</string>
    <string name="github_navigation3">Wine Github</string>
    <string name="github_navigation4">pelya/XSDL Github</string>
    <string name="open_navigation">Open</string>
    <string name="close_navigation">Close</string>
    <string name="screen">Screen Resolution:</string>
    <string name="start">Run Explorer</string>
    <string name="addlibrary">Add new Library</string>
    <string name="scr">Not Set</string>
    <string name="empty">[EMPTY]</string>
    <string name="extract">Extracting File</string>
    <string name="selectfile">Select A File</string>
    <string name="notification">Beta Version</string>
    <string name="notification1">First Of All, I Thank The Developer ptitSeb/box86 And Termux, Box86 Is Almost Exclusively Designed To Support On linux, So It Is Difficult To Fully Integrate On Android Below Is The List That Is Not Yet Supported On Android Box86 \n Sound Driver \n GLX/3D Dardware Accelerated GPU \n Wine Native Window</string>
    <string name="addlib">Add Library</string>
    <string name="contentaddlib">To Add Libraries Those Libraries Must Be Compiled With NDK Or Inside TERMUX (NOT chroot), \n You Can Use The Available Libraries Of TERMUX</string>
    <string name="about">Box86Launcher Is Modified Version Of ptitSeb/box86 Which Runs x86 Version Of WineHQ On Android Natively. Unlike ExaGear or Running Box86 Over Linux Chroot/PRoot, It Runs Tt Natively Without Any Layers Directly On Android. It Uses Android Library, Which Is In /system/lib. Also Uses Libs From Termux, Mainly X11 to Display Wine on Xserver. To Add More Libraries, It Must Be Compiled With NDK</string>
    <string name="DrOpen">Open Drawer</string>
    <string name="DrClose">Close Drawer</string>
    <string name="application_name">Termux</string>
    <string name="shared_user_label">Termux user</string>
    <string name="run_command_permission_label">Run commands in Termux environment</string>
    <string name="run_command_permission_description">execute arbitrary commands within Termux environment</string>
    <string name="new_session">New session</string>
    <string name="new_session_failsafe">Failsafe</string>
    <string name="toggle_soft_keyboard">Keyboard</string>
    <string name="reset_terminal">Reset</string>
    <string name="style_terminal">Style</string>
    <string name="share_transcript_title">Terminal transcript</string>
    <string name="help">Help</string>
    <string name="toggle_keep_screen_on">Keep screen on</string>
    <string name="autofill_password">Autofill password</string>
    <string name="bootstrap_installer_body">Installing…</string>
    <string name="bootstrap_error_title">Unable to install</string>
    <string name="bootstrap_error_body">Termux was unable to install the bootstrap packages.</string>
    <string name="bootstrap_error_abort">Abort</string>
    <string name="bootstrap_error_try_again">Try again</string>
    <string name="bootstrap_error_not_primary_user_message">Termux can only be installed on the primary user account.</string>
    <string name="max_terminals_reached_title">Max terminals reached</string>
    <string name="max_terminals_reached_message">Close down existing ones before creating new.</string>
    <string name="reset_toast_notification">Terminal reset.</string>
    <string name="select_url">Select URL</string>
    <string name="select_url_dialog_title">Click URL to copy or long press to open</string>
    <string name="select_all_and_share">Share transcript</string>
    <string name="select_url_no_found">No URL found in the terminal.</string>
    <string name="select_url_copied_to_clipboard">URL copied to clipboard</string>
    <string name="share_transcript_chooser_title">Send text to:</string>
    <string name="kill_process">Kill process (%d)</string>
    <string name="confirm_kill_process">Really kill this session?</string>
    <string name="session_rename_title">Set session name</string>
    <string name="session_rename_positive_button">Set</string>
    <string name="session_new_named_title">New named session</string>
    <string name="session_new_named_positive_button">Create</string>
    <string name="styling_not_installed">The Termux:Style add-on is not installed.</string>
    <string name="styling_install">Install</string>
    <string name="notification_action_exit">Exit</string>
    <string name="notification_action_wake_lock">Acquire wakelock</string>
    <string name="notification_action_wake_unlock">Release wakelock</string>
    <string name="file_received_title">Save file in ~/downloads/</string>
    <string name="file_received_edit_button">Edit</string>
    <string name="file_received_open_folder_button">Open folder</string>
    <string name="init">Initializing</string>
    <string name="please_wait">Please wait while data is being downloaded</string>
    <string name="device_config">Device configuration</string>
    <string name="device_change_cfg">Change device configuration</string>
    <string name="download_unneeded">No need to download</string>
    <string name="connecting_to">Connecting to %s</string>
    <string name="failed_connecting_to">Failed connecting to %s</string>
    <string name="error_connecting_to">Error connecting to %s</string>
    <string name="dl_from">Downloading data from %s</string>
    <string name="error_dl_from">Error downloading data from %s</string>
    <string name="error_write">Error writing to %s</string>
    <string name="dl_progress">%1$.0f%% done: file %2$s</string>
    <string name="dl_finished">Finished</string>
    <string name="storage_phone">Internal storage - %d MB free</string>
    <string name="storage_sd">SD card storage - %d MB free</string>
    <string name="storage_custom">Specify directory</string>
    <string name="storage_commandline">Command line parameters, one argument per line</string>
    <string name="storage_question">Data installation location</string>
    <string name="storage_access">Permission to write to SD card</string>
    <string name="optional_downloads">Downloads</string>
    <string name="downloads">Downloads</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="controls_arrows">Arrows / joystick / dpad</string>
    <string name="controls_trackball">Trackball</string>
    <string name="controls_accel">Accelerometer</string>
    <string name="controls_touch">Touchscreen only</string>
    <string name="controls_question">What kind of navigation keys does your device have?</string>
    <string name="controls_additional">Additional controls</string>
    <string name="controls_screenkb">On-screen keyboard</string>
    <string name="controls_accelnav">Accelerometer</string>
    <string name="controls_screenkb_size">On-screen keyboard size</string>
    <string name="controls_screenkb_drawsize">Size of button images</string>
    <string name="controls_screenkb_large">Large</string>
    <string name="controls_screenkb_medium">Medium</string>
    <string name="controls_screenkb_small">Small</string>
    <string name="controls_screenkb_tiny">Tiny</string>
    <string name="controls_screenkb_custom">Custom</string>
    <string name="controls_screenkb_theme">On-screen keyboard theme</string>
    <string name="controls_screenkb_by">%1$s by %2$s</string>
    <string name="controls_screenkb_transparency">On-screen keyboard transparency</string>
    <string name="controls_screenkb_trans_0">Invisible</string>
    <string name="controls_screenkb_trans_1">Almost invisible</string>
    <string name="controls_screenkb_trans_2">Transparent</string>
    <string name="controls_screenkb_trans_3">Semi-transparent</string>
    <string name="controls_screenkb_trans_4">Non-transparent</string>
    <string name="trackball_no_dampening">No dampening</string>
    <string name="trackball_fast">Fast</string>
    <string name="trackball_medium">Medium</string>
    <string name="trackball_slow">Slow</string>
    <string name="trackball_question">Trackball dampening</string>
    <string name="accel_veryfast">Very fast</string>
    <string name="accel_fast">Fast</string>
    <string name="accel_medium">Medium</string>
    <string name="accel_slow">Slow</string>
    <string name="accel_veryslow">Very slow</string>
    <string name="accel_question">Accelerometer sensitivity</string>
    <string name="accel_floating">Floating</string>
    <string name="accel_fixed_start">Fixed when application starts</string>
    <string name="accel_fixed_horiz">Fixed to table desk orientation</string>
    <string name="accel_question_center">Accelerometer center position</string>
    <string name="mouse_emulation">Mouse emulation</string>
    <string name="rightclick_question">Right mouse click</string>
    <string name="rightclick_menu">Menu key</string>
    <string name="rightclick_key">Physical key</string>
    <string name="rightclick_multitouch">Touch screen with second finger</string>
    <string name="rightclick_pressure">Touch screen with force</string>
    <string name="rightclick_none">Disable right mouse click</string>
    <string name="leftclick_question">Left mouse click</string>
    <string name="leftclick_normal">Normal</string>
    <string name="leftclick_near_cursor">Touch near mouse cursor</string>
    <string name="leftclick_multitouch">Touch screen with second finger</string>
    <string name="leftclick_pressure">Touch screen with force</string>
    <string name="leftclick_dpadcenter">Trackball click / joystick center</string>
    <string name="leftclick_timeout">Hold at the same spot</string>
    <string name="leftclick_tap">Tap</string>
    <string name="leftclick_tap_or_timeout">Tap or hold</string>
    <string name="leftclick_timeout_time">Holding timeout</string>
    <string name="leftclick_timeout_time_0">0.3 sec</string>
    <string name="leftclick_timeout_time_1">0.5 sec</string>
    <string name="leftclick_timeout_time_2">0.7 sec</string>
    <string name="leftclick_timeout_time_3">1 sec</string>
    <string name="leftclick_timeout_time_4">1.5 sec</string>
    <string name="click_with_dpadcenter">Left mouse click with trackball / joystick center</string>
    <string name="advanced">Advanced features</string>
    <string name="mouse_keepaspectratio">Keep 4:3 screen aspect ratio</string>
    <string name="mouse_showcreenunderfinger">Show screen under finger in separate window</string>
    <string name="mouse_showcreenunderfinger2">On-screen magnifying glass</string>
    <string name="mouse_joystickmouse">Move mouse with joystick or trackball</string>
    <string name="mouse_joystickmousespeed">Move mouse with joystick speed</string>
    <string name="mouse_joystickmouseaccel">Move mouse with joystick acceleration</string>
    <string name="mouse_relative">Relative mouse movement (laptop mode)</string>
    <string name="mouse_relative_speed">Relative mouse movement speed</string>
    <string name="mouse_relative_accel">Relative mouse movement acceleration</string>
    <string name="mouse_hover_jitter_filter">Filter jitter for stylus/finger hover</string>
    <string name="mouse_gyroscope_mouse">Control mouse with gyroscope</string>
    <string name="mouse_gyroscope_mouse_sensitivity">Gyroscope sensitivity</string>
    <string name="mouse_finger_hover">Finger hover</string>
</resources>